manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: gcr.io/PROJECT_ID/IMAGE
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "50m"
              memory: "10Mi"
