manifests/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: ping-pong-serverless
  namespace: applications
spec:
  template:
    spec:
      containers:
        - image: docker.io/pasiol/ping-pong@sha256:999184f57e91b283454e2017761fd8b344cf152b3db5a56cb22d309fe560610a
          env:
            - name: APP_PORT
              value: "8080"
            - name: POSTGRES_HOST
              value: ping-pong-postgres-svc
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: postgres
                  key: POSTGRES_USER
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres
                  key: POSTGRES_PASSWORD
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  name: postgres
                  key: POSTGRES_DB
